# rustymind

./: Cargo.toml  LICENSE.md  README.md  learn.py  train_data.py
src/: learn.rs  lib.rs  main.rs  plot.rs
