[package]
name = "rustymind"
version = "0.1.0"
authors = ["Junjun Dong <junjun.dong9@gmail.com>"]
edition = "2018"
description = "A driver, parser and real time plotter for NeuroSky MindWave EGG headset"
license-file = "LICENSE.md"
documentation = "https://docs.rs/rustymind"
homepage = "https://github.com/junjunjd/rustymind"
repository = "https://github.com/junjunjd/rustymind"

[lib]
name = "rustymind"
path = "src/lib.rs"

[[bin]]
name = "rustymind"
path = "src/main.rs"

[[bin]]
name = "rustymind-plot"
path = "src/plot.rs"

[dependencies]
serialport = "4"
plotters = "0"
minifb = "0"
plotters-bitmap = "0"
log = "0"
ctrlc = "3"
env_logger = "0"
clap = "2"
hex = "0"

[dev-dependencies]
pretty_assertions = "0"
