[package]
name = "rustymind"
version = "0.1.3"
authors = ["Junjun Dong <junjun.dong9@gmail.com>"]
edition = "2018"
description = "A driver, parser and real time plotter for NeuroSky MindWave EEG headset"
license-file = "LICENSE.md"
documentation = "https://docs.rs/rustymind"
homepage = "https://github.com/junjunjd/rustymind"
repository = "https://github.com/junjunjd/rustymind"
keywords = ["brainwave", "neuroscience", "BCI", "EEG", "NeuroSky"]

[lib]
name = "rustymind"
path = "src/lib.rs"

[[bin]]
name = "rustymind"
path = "src/main.rs"

[[bin]]
name = "rustymind-plot"
path = "src/plot.rs"

[[bin]]
name = "rustymind-learn"
path = "src/learn.rs"

[dependencies]
serialport = "4"
plotters = "0"
minifb = "0"
plotters-bitmap = "0"
log = "0"
ctrlc = "3"
env_logger = "0"
clap = "2"
hex = "0"
csv = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0"
